--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -26,6 +26,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
@@ -35,6 +39,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation "com.facebook.react:react-native:+" // From node_modules
+    implementation 'com.squareup.workflow:workflow-ui-core-android:0.23.2'
 
     // Solve the hermes.so crash.
     def hermesPath = "../../node_modules/hermes-engine/android/";
