--- a/android/build.gradle
+++ b/android/build.gradle
@@ -27,6 +27,12 @@ allprojects {
       url("$rootDir/../node_modules/jsc-android/dist")
     }
   }
+
+  tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
+    kotlinOptions {
+      jvmTarget = "1.8"
+    }
+  }
 }
 
 task clean(type: Delete) {
