--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,2 +1,3 @@
 include ':app'
 rootProject.name = "React Workflow"
+apply from: file("../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesSettingsGradle(settings)
